2011-07-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add wrappers for multi-evaluation:
	  void LegendrofyAddMulti  (LegendreCoefs* lc, Double_t scale=1, Int_t l_max=-1);
	  void LegendrofyScaleMulti(LegendreCoefs* lc, Double_t scale=1, Int_t l_max=-1);
	  void LegendrofyRandomMulti(Int_t l_max, Double_t abs_scale=0.1, Double_t pow_scale=1.5);

2011-07-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSurf.cxx:
	Check input arguments in LegendrofyXyzz() functions.

2011-07-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Use associated Legendre polynoms from Numerica / GSL -- add
	dependency on Numerica libset.

	* Makefile:
	Add dependency on Numerica libset.

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Remove silly associated Legendre polynom evaluation class.
	Replace simple random Legendrofy() with set of functions:
	  void LegendrofyAdd  (LegendreCoefs* lc, Double_t scale=1, Int_t l_max=-1);
	  void LegendrofyScale(LegendreCoefs* lc, Double_t scale=1, Int_t l_max=-1);
	  void LegendrofyScaleRandom(Int_t l_max, Double_t abs_scale=0.1,Double_t pow_scale=1.5);

2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add functions for getting volume and area of surface.

2010-09-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* GTS/GTS.cxx:
	* GTS/GTS.h:
	* Glasses/GTSurf.cxx:
	* Glasses/GTSurf.h:
	Add functions:
	  void TransformAndResetTrans();
	  void RotateAndResetRot();
	that transform surface vertices and reset corresponding part of
	transformation matrix.

2010-09-12  Matevz Tadel  <matevz.tadel@ijs.si>

	Proto-implementation of bool operations and result fixing.

	* GTS/GTSBoolOpHelper.cxx:
	* GTS/GTSBoolOpHelper.h:
	Helper for bollen ops and fixing.

	* attic/BoolOpFixOnIntersectionCurve.cxx:
	Attempt at fixing bool ops on intersection curve.

	* GTS/GTS.cxx:
	* GTS/GTS.h:
	Add functions:
	  void TransformSurfaceVertices(GtsSurface* s, ZTrans* t);